--- a/.github/workflows/build-push.yml
+++ b/.github/workflows/build-push.yml
@@ -1,8 +1,9 @@
 name: Docker Image CI for GHCR
 on:
   push
-branches:
-  - main
+push:
+  branches:
+    - main
 jobs:
   build_and_push:
     runs-on: ubuntu-latest
