--- a/.github/workflows/build-push.yml
+++ b/.github/workflows/build-push.yml
@@ -1,4 +1,4 @@
-name: Docker Image CI for GHCR
+name: Build-Push CI for GHCR
 on:
   push:
     tags:
@@ -9,16 +9,18 @@ on:
 jobs:
   build_and_push:
     runs-on: ubuntu-latest
-    steps: 
+    steps:
 
       - uses: actions/checkout@v3
+
       - name: login to docker hub
         uses: docker/login-action@v3
         with:
           registry: ghcr.io
           username: ${{ github.actor }}
           password: ${{ secrets.GH_PAT }}
-      - name: Build and push the image
+
+      - name: Build and push
         run : |
           docker build . --tag ghcr.io/edracoon/portfolio-front:latest
           docker push ghcr.io/edracoon/portfolio-front:latest
