--- a/nginx.conf
+++ b/nginx.conf
@@ -7,7 +7,7 @@ server {
 
   server_tokens off;
 
-  # Cache static assets aggressively (adjust patterns to your build output)
+  # Cache static assets
   location ~* \.(js|css|png|jpg|jpeg|svg|gif?)$ {
     try_files $uri =404;
     expires 30d;
