--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "private": true,
     "type": "module",
     "scripts": {
-        "dev": "bun --hot src/index.ts",
+        "dev": "bun --hot src/index.ts --host 0.0.0.0",
         "start": "NODE_ENV=production bun src/index.ts",
         "build": "bun run build.ts --outdir dist --target browser && cp -r public dist/",
         "preview": "bun run dist/index"
@@ -18,9 +18,11 @@
         "bun-plugin-tailwind": "^0.1.2",
         "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
+        "developer-icons": "^6.0.5",
         "gsap": "^3.13.0",
         "lucide-react": "^0.545.0",
         "motion": "^12.23.12",
+        "radix-ui": "^1.4.3",
         "react": "^19",
         "react-dom": "^19",
         "styled-components": "^6.3.8",
